--- a/.editorconfig
+++ b/.editorconfig
@@ -3,12 +3,12 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-indent_size = 4
+indent_size = 2
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,jsx}]
+[*.jsx]
 indent_size = 2
 
 [*.md]
@@ -18,4 +18,4 @@ trim_trailing_whitespace = false
 indent_size = 2
 
 [docker-compose.yml]
-indent_size = 4
+indent_size = 2
